<resources>
    <!-- Strings that are not going to be used, please delete these when all instances are removed -->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet.</string>
    <string name="action_settings">Settings</string>
    <string name="previous">Previous</string>

    <!-- Strings used for titles and text -->
    <string name="app_name">AutoIQ</string>
    <string name="homepage_selected_car">Add a vehicle to begin!</string>
    <string name="add_new_vehicle_title">Add New Vehicle</string>
    <string name="mileage">0 miles</string>
    <string name="mileage_last_updated">Last updated: never</string>
    <string name="notification_setting">Notifications for this vehicle are OFF</string>
    <string name="coming_up">Coming up:</string>
    <string name="next_maintenance">Next maintenance</string>
    <string name="next_maintenance_mileage">0 miles</string>
    <string name="next_maintenance_or">- OR -</string>
    <string name="next_maintenance_date">Jan 01, 2020</string>
    <string name="tutorial">Tutorial</string>
    <string name="notes">Notes</string>
    <string name="maintenance_by_miles_title">Maintenance by Miles</string>
    <string name="maintenance_by_time_title">Maintenance by Time</string>
    <string name="upcoming_maintenance_miles_text">Vehicle not found in Database</string>
    <string name="upcoming_maintenance_time_text">Vehicle not found in Database</string>
    <string name="title_add_new_maintenance">Add New Maintenance</string>
    <string name="year_label">Year</string>
    <string name="make_label">Make</string>
    <string name="model_label">Model</string>
    <string name="current_mileage_label">Current mileage</string>
    <string name="hint_enter_mileage">Enter Current mileage here</string>
    <string name="maintenance_performed">When was this maintenance performed?</string>
    <string name="hint_date">MM/DD/YYYY</string>
    <string name="maintenance_action">What maintenance action was performed?</string>
    <string name="add_more_label">Add More</string>
    <string name="add_more_label_button">Add More button</string>
    <string name="notification_question">Would you like to turn on notifications for this vehicle?</string>
    <string name="notification_subtext">(oil changes, upcoming maintenance, etc.)</string>
    <string name="checkbox_text">I don’t want to miss anything!</string>
    <string name="calendar_button_description">Calendar button</string>
    <string name="save_button">Save</string>
    <string name="notes_sub">Write what you want here!</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Homepage</string>
    <string name="second_fragment_label">Second Fragment</string>

    <!-- Strings used for buttons -->
    <string name="logo">Auto IQ Logo</string>
    <string name="btn_tutorial">Tutorial Button</string>
    <string name="btn_notes">Notes Button</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="turn_on">Turn on</string>
    <string name="turn_off">Turn off</string>
    <string name="add_new_maintenance">Add new maintenance</string>
    <string name="view_upcoming_maintenance">View upcoming maintenance</string>
    <string name="add_new_vehicle">Add new vehicle</string>
    <string name="add_car_detail">Vehicle Name</string>
    <string name="add_car_mileage">Vehicle Mileage</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="user_created">Submit</string>

    <!-- Strings used for content descriptions -->
    <string name="mileage_last_updated_late_icon">It\'s been a while since the last update!</string>
    <string name="currently_selected_vehicle_image">There is no vehicle displayed.</string>
    <string name="app_logo"/>

    <string-array name="car_makes">
        <item>Toyota</item>
        <item>Honda</item>
        <item>Ford</item>
        <item>Chevrolet</item>
        <item>BMW</item>
        <!-- Add more car makes as needed -->
    </string-array>

    <!-- Car Model Options -->
    <string-array name="car_models">
        <item>Camry</item>
        <item>Civic</item>
        <item>Mustang</item>
        <item>Impala</item>
        <item>3 Series</item>
        <!-- Add more car models as needed -->
    </string-array>

    <!-- Year Options -->
    <string-array name="car_years">
        <item>2024</item>
        <item>2023</item>
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <!-- Add more years as needed -->
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>