<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            android:id="@+id/appBarLayout">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="75dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" android:layout_weight="20">
                <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_weight="10"/>
                <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="0dp" app:srcCompat="@drawable/baseline_menu_book_24"
                        android:id="@+id/btn_tutorial" android:layout_weight="70"
                        android:contentDescription="@string/btn_tutorial"/>
                <TextView
                        android:text="@string/tutorial"
                        android:layout_width="match_parent"
                        android:layout_height="0dp" android:id="@+id/textView_tutorial" android:layout_weight="20"
                        android:textAlignment="center" android:textSize="12sp"/>
            </LinearLayout>
            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent" app:srcCompat="@drawable/logo" android:id="@+id/imageView_logo"
                    android:layout_weight="60" android:contentDescription="@string/logo"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" android:layout_weight="20">
                <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_weight="10"/>
                <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="0dp" app:srcCompat="@drawable/baseline_assignment_24"
                        android:id="@+id/btn_notes" android:layout_weight="70"
                        android:contentDescription="@string/btn_notes"/>
                <TextView
                        android:text="@string/notes"
                        android:layout_width="match_parent"
                        android:layout_height="0dp" android:id="@+id/textView_notes" android:layout_weight="20"
                        android:textAlignment="center" android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>